Fixed the scrollbar

--- a/friends.custom.dev.css
+++ b/friends.custom.dev.css
@@ -1,8 +1,3 @@
-::-webkit-scrollbar {
-	background-color:#fff;
-	width:16px;
-}
-
 ::-webkit-scrollbar-track {
 	background-color: transparent;
 }
@@ -12,17 +7,9 @@
 }
 
 ::-webkit-scrollbar-thumb {
-	background-color: #262626 !important;
+	background-color: #22252b!important;
 	border-radius: 16px;
-	border: 4px solid #333333;
 }
-
-.body::-webkit-scrollbar-track {
-	background-color: transparent;
-	-webkit-border-radius: 10px;
-	border-radius: 10px;
-}
-
 
 /* Close, Minimize, Maximize and full buttons. */
 .title-area-icon .SVGIcon_Minimize {
